Fix contrast

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -884,7 +884,7 @@ input:valid {
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(0, 0, 0, 0.5);
 }
 .modal-content {
     background-color: var(--ink-000);
@@ -941,9 +941,15 @@ input:valid {
     background: #C0C0C0;
     color: var(--ink-700);
 }
+#silver-modal .close {
+    color: var(--ink-900);
+}
 #gold-modal .modal-header {
     background: #FFD700;
     color: var(--ink-700);
+}
+#gold-modal .close {
+    color: var(--ink-900);
 }
 .modal-body ul {
     margin: 0;
